Model Implementation Fix

--- a/Event Management Appilcation/appsettings.json
+++ b/Event Management Appilcation/appsettings.json
@@ -7,17 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=5CG1153CYX\\SQLEXPRESS;Initial Catalog=EventManagement;Integrated Security=True"
+    "ConnStr": "Data Source=5CG1153CYX\\SQLEXPRESS;Initial Catalog=EventManagementDB;Integrated Security=True",
+    "AdminContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Event Management Appilcation;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "EmailConfiguration": {
-    "From": "mileshtaukoorah@gmail.com", // this is the email from which you will send the email to the other people 
+    "From": "mileshtaukoorah@gmail.com",
     "smtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "mileshtaukoorah@gmail.com",
     "Password": "mloihikhvbbcolfy"
-
-
-
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
@@ -25,6 +23,3 @@
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp10H7Xzyr"
   }
 }
-
-
-
