--- a/Event Management Appilcation/appsettings.json
+++ b/Event Management Appilcation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnStr": "Data Source=5CG94232MX\\SQLEXPRESS;Initial Catalog=EventManagementDB;Integrated Security=True",
+    "ConnStr": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=EventManagementDBnew;Integrated Security=True",
     "AdminContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Event Management Appilcation;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "EmailConfiguration": {
