for the user to registerfortheevent

--- a/Event Management Appilcation/appsettings.json
+++ b/Event Management Appilcation/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "ConnStr": "Data Source=CYPKJS3\\SQLEXPRESS01;Initial Catalog=EventManagementsDBnew;Integrated Security=True",
+    "ConnStr": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=EventManagementsDBnew;Integrated Security=True",
 
     "AdminContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Event Management Appilcation;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
